Buttons names in templates was changed

--- a/meter_readings/templates/meter_readings/statistics_hot.html
+++ b/meter_readings/templates/meter_readings/statistics_hot.html
@@ -15,5 +15,5 @@
             </tr>
             {% endfor %}
     </table>
-    <p><a href="{% url 'dashboard' %}">statistics</a></p>
+    <p><a href="{% url 'dashboard' %}">Назад</a></p>
 {% endblock %}
