--- a/meter_readings/templates/registration/password_change.html
+++ b/meter_readings/templates/registration/password_change.html
@@ -3,7 +3,7 @@
     <form method="post" action="">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Зарегистрировать">
+        <input type="submit" value="Сменить пароль">
     </form>
     <p><a href="{% url 'dashboard' %}">Назад</a></p>
 {% endblock %}
