Crispy forms was added

--- a/meter_readings/static/css/meter_readings.css
+++ b/meter_readings/static/css/meter_readings.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #ff9400;
+    background-color: #00cfff;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -10,12 +10,36 @@
     text-decoration: none;
 }
 
+table {
+font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+text-align: center;
+border-collapse: collapse;
+border-spacing: 5px;
+background: #E1E3E0;
+border-radius: 20px;
+}
+
+th {
+font-size: 22px;
+font-weight: 300;
+padding: 12px 10px;
+border-bottom: 2px solid #F56433;
+color: #F56433;
+}
+tbody tr:nth-child(1) {
+border-bottom: 2px solid #F56433;
+}
+td {
+padding: 10px;
+color: #8D8173;
+}
+
 .content {
     margin-left: 40px;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster';
 }
 
 .date {
