--- a/meter_readings/templates/meter_readings/users_list.html
+++ b/meter_readings/templates/meter_readings/users_list.html
@@ -1,7 +1,7 @@
 {% extends 'meter_readings/base.html' %}
 {% block content %}
-    <table border="1">
-        <caption align="left">Список пользователей</caption>
+<h1>Список пользователей</h1>
+    <table >
             <tr align="center">
                 <th align="center">ID</th>
                 <th align="center">Имя пльзователя</th>
