--- a/meter_readings/templates/meter_readings/base.html
+++ b/meter_readings/templates/meter_readings/base.html
@@ -1,7 +1,10 @@
 {% load static %}
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Metrics</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
@@ -9,14 +12,18 @@
     </head>
     <body>
     <div class="page-header">
-         {% if user.is_authenticated %}
-        <a href="" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <a href="" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-        <p class="top-menu">Привет, {{ request.user.username }} <small>(<a href="{% url 'logout' %}">Выйти</a>)</small></p>
+         {% if user.is_authenticated and user.is_staff == False %}
+        <a href="{% url 'logout' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
+        <p class="top-menu">Привет, {{ request.user.username }}</p>
         <h1><a href="/">Мой расход воды</a></h1>
 
+        {% elif user.is_authenticated and user.is_staff == True %}
+        <a href="{% url 'logout' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
+        <p class="top-menu">Привет, {{ request.user.username }}</p>
+        <h1><a href="/">Мой расход воды (администратор)</a></h1>
+
         {% else %}
-        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
         <h1><a href="/">Добро пожаловать на портал учета воды</a></h1>
         <div>
             <p><a href="{% url 'login' %}">Войдите</a> или <a href="{% url 'register' %}">зарегистрируйтесь</a> </p>
