--- a/meter_readings/templates/meter_readings/readings_list.html
+++ b/meter_readings/templates/meter_readings/readings_list.html
@@ -1,7 +1,8 @@
 {% extends 'meter_readings/base.html' %}
 {% block content %}
-    <table border="1">
-        <caption align="center">История показаний</caption>
+    <h1>История показаний</h1>
+    {% if readings.count > 0 %}
+    <table>
             <tr align="center">
                 <th>ID</th>
                 <th>Горячая вода</th>
@@ -17,5 +18,8 @@
             </tr>
         {% endfor %}
     </table>
+    {% else %}
+        <p>Показания счетчиков отсутствуют</p>
+    {% endif %}
     <p><a href="{% url 'dashboard' %}">Назад</a></p>
 {% endblock %}
