--- a/meter_readings/templates/meter_readings/user_profile.html
+++ b/meter_readings/templates/meter_readings/user_profile.html
@@ -5,4 +5,6 @@
 <p>Логин:  {{ user.username }}</p>
 <p>Email:  {{ user.email }}</p>
 <p><a href="{% url 'user_profile_edit' %}">Редактировать</a></p>
+<p><a href="{% url 'change' %}">Сменить пароль</a></p>
+<p><a href="{% url 'dashboard' %}">Назад</a></p>
 {% endblock %}
