--- a/meter_readings/templates/meter_readings/user_profile_edit.html
+++ b/meter_readings/templates/meter_readings/user_profile_edit.html
@@ -1,9 +1,12 @@
 {% extends 'meter_readings/base.html' %}
+
+{% load crispy_forms_tags %}
+
 {% block content %}
     <form method="post" class="post-form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" class="save btn btn-default">Сохранить</button>
     </form>
-    <p><a href="{% url 'user_profile' %}">Назад</a></p>
+    <p><a href="{% url 'dashboard' %}">Назад</a></p>
 {% endblock %}
