--- a/meter_readings/templates/registration/login.html
+++ b/meter_readings/templates/registration/login.html
@@ -1,21 +1,16 @@
 {% extends 'meter_readings/base.html' %}
+
+{% load crispy_forms_tags %}
+
 {% block content %}
     {% if form.errors %}
         <p>Неправильное имя пользователя или пароль</p>
     {% endif %}
 
+
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
-        <table>
-            <tr>
-                <td>{{form.username.label_tag}}</td>
-                <td>{{form.username}}</td>
-            </tr>
-            <tr>
-                <td>{{form.password.label_tag}}</td>
-                <td>{{form.password}}</td>
-            </tr>
-        </table>
+        {{ form|crispy }}
 
         <input type="submit" value="Войти" />
         <input type="hidden" name="next" value="{{ next }}" />
