Borders was remowed in statistic tables

--- a/meter_readings/templates/meter_readings/statistics_cold.html
+++ b/meter_readings/templates/meter_readings/statistics_cold.html
@@ -1,7 +1,7 @@
 {% extends 'meter_readings/base.html' %}
 {% block content %}
 <h2>Наибольшие потребители холодной воды</h2>
-    <table border="1">
+    <table>
             <tr>
                 <th>ID</th>
                 <th>Имя пользователя</th>
