--- a/meter_readings/templates/meter_readings/user_profile.html
+++ b/meter_readings/templates/meter_readings/user_profile.html
@@ -1,5 +1,6 @@
 {% extends 'meter_readings/base.html' %}
 {% block content %}
+<h2>Профиль</h2>
 <p>Имя:  {{ user.first_name }}</p>
 <p>Фамилия:  {{ user.last_name }}</p>
 <p>Логин:  {{ user.username }}</p>
